validation added and readme file content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     },
     "include": [
       "src/**/*.ts"
-    ],
+, "src/tests/authRoutes.test.js"    ],
     "exclude": [
       "node_modules"
     ]
