--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "app using passport local strategy and ts",
   "main": "server.ts",
   "scripts": {
-    "start" : "nodemon src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/server.ts",
+    "test": "jest"
   },
   "author": "luis colina",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.3.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
@@ -25,10 +26,15 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.12",
     "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
